--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ssf",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
+    "dev": "svelte-kit dev --port 3000",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
@@ -14,24 +14,30 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.21.0",
+    "@playwright/test": "^1.21.1",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "autoprefixer": "^10.4.5",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte3": "^3.4.1",
     "postcss": "^8.4.12",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
+    "svelte-preprocess": "^4.10.6",
     "tailwindcss": "^3.0.24",
-    "tslib": "^2.3.1",
-    "typescript": "~4.6.2"
+    "tslib": "^2.4.0",
+    "typescript": "~4.6.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@fontsource/inter": "^4.5.7",
+    "@supabase/supabase-js": "^1.35.2",
+    "dotenv": "^16.0.0",
+    "sveltekit-i18n": "^2.2.0"
+  }
 }
