--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ssf",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --port 3000",
+    "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
@@ -14,30 +14,31 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.21.1",
+    "@playwright/test": "^1.22.2",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "autoprefixer": "^10.4.5",
-    "eslint": "^8.14.0",
+    "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^3.4.1",
-    "postcss": "^8.4.12",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
-    "svelte": "^3.47.0",
-    "svelte-check": "^2.7.0",
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.6",
     "tailwindcss": "^3.0.24",
     "tslib": "^2.4.0",
-    "typescript": "~4.6.3"
+    "typescript": "~4.6.4"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/inter": "^4.5.7",
-    "@supabase/supabase-js": "^1.35.2",
-    "dotenv": "^16.0.0",
-    "sveltekit-i18n": "^2.2.0"
+    "@fontsource/inter": "^4.5.10",
+    "@supabase/supabase-js": "^1.35.3",
+    "dotenv": "^16.0.1",
+    "sveltekit-i18n": "^2.2.2"
   }
 }
